--- a/style.css
+++ b/style.css
@@ -26,7 +26,7 @@ body
 {
 	color: #fff !important;
 	font-weight: 600;
-	float: right;
+	float: left;
 	text-align: left;
 }
 .fa-bars
@@ -235,4 +235,13 @@ body
 	border-radius: 0;
 	margin-top: 30px;
 	background-image: linear-gradient(to right,#a517ba,#5f1782);
+}
+@media ( width: 360px){
+	h1{
+		font-size: 1.5rem;
+	}
+	.title::before {
+
+		transform: translateY(43px);
+	}
 }
